--- a/db/ex2pt2.lpc.html
+++ b/db/ex2pt2.lpc.html
@@ -16,8 +16,24 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >inst</TD>
+<TD >inst2</TD>
 <TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst</TD>
+<TD >2</TD>
 <TD >27</TD>
 <TD >0</TD>
 <TD >27</TD>
